admin-and-word-list

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -37,6 +37,11 @@ en:
   homepages:
     index:
       a: "Learn Languages Easily"
+  words:
+    index:
+      h: "Home"
+      w: "Word List"
+      l: "List of Words"
   categories:
     new:
       h: "Home"
